@@ -898,6 +898,13 @@ when the C<realclean> action is performed.
 
 Returns the name of the currently-running action, such as "build" or "test".
 
+=item dir_contains($first_dir, $second_dir)
+
+Returns true if the first directory logically contains the second
+directory.  This is just a convenience function because C<File::Spec>
+doesn't really provide an easy way to figure this out (but
+C<Path::Class> does...).
+
 =item dispatch($action, %args)
 
 This method is also called from the auto-generated C<Build> script.
